--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 license = "GPL-3.0"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "Parity bitcoin client."
+edition = "2018"
 
 [dependencies]
 log = "0.4"
@@ -26,6 +27,7 @@ import = { path = "import" }
 logs = { path = "logs" }
 rpc = { path = "rpc" }
 primitives = { path = "primitives" }
+tokio = { version = "=0.2.0-alpha.6", path = "../tokio/tokio" }
 
 [profile.dev]
 debug = true
